[tool.poetry]
name = "agent-planning"
version = "0.0.1"
authors = [
    "Cheng Chen"
]
description = "A user new agent template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "agent_planning" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
agent-planning = "agent_planning.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

