[tool.poetry]
name = "agent-urlload"
version = "0.1.1"
authors = [
    "Cheng Chen <chenzi00103@gmail.com>",
]
description = "A simple hello-world template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "agent_urlload" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
agent-urlload = "agent_urlload.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


