[tool.poetry]
name = "selenium-connector"
version = "0.0.1"
authors = [
    "Chgeng Chen"
]
description = "A user new selenium-connector template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "selenium_connector" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
selenium = "*"
webdriver_manager = "*"
beautifulsoup4 = "*"

[tool.poetry.scripts]
selenium-connector = "selenium_connector.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

